# ZeroAI

./: .gitignore  CONTRIBUTING.md  LICENSE  README.md  agents.md.default  popcorn.md  settings.gradle.kts
.github/workflows/: ci.yml  kdoc.yml
app/: build.gradle.kts  proguard-rules.pro
assets/: mini-zero-animations.md
benchmark/: build.gradle.kts
config/detekt/: baseline.xml  detekt.yml
docs/guides/: rhai-scripting-guide.md  (+1 more)
gradle/: libs.versions.toml
lib/: build.gradle.kts
scripts/: build-ghostty.sh  install-hooks.sh  lint-all.sh  pre-commit.sh  read-credential.ps1
zeroclaw/: .env.example  Cargo.toml  NOTICE  README.md  RUN_TESTS.md  TESTING_TELEGRAM.md  build.rs
zeroclaw-android/: Cargo.toml  deny.toml
zeroclaw-android/zeroclaw-ffi/: Cargo.toml  build.rs
zeroclaw-android/zeroclaw-ffi/src/: agent_script_host.rs  auth_profiles.rs  capability_grants.rs  consolidation.rs  cost.rs  credentials.rs  cron.rs  discord.rs  email_cron.rs  error.rs  estop.rs  eval_script_tool.rs  events.rs  ffi_health.rs  gateway_client.rs  health.rs  lib.rs  memory_browse.rs  messages_bridge.rs  messages_bridge_page.rs  models.rs  provider_info.rs  repl.rs  runtime.rs  session.rs  session_persistence.rs  shared_folder.rs  skills.rs  streaming.rs  tailnet.rs  tools_browse.rs  traces.rs  twitter.rs  types.rs  url_helpers.rs  vision.rs  web_renderer.rs  workspace.rs
zeroclaw-android/zeroclaw-ffi/src/clawboy/: bridge.rs  chat.rs  emulator.rs  journal.rs  memory_map.rs  mod.rs  prompts.rs  session.rs  types.rs  viewer.rs  viewer_page.rs
zeroclaw-android/zeroclaw-ffi/src/tty/: backend.rs  context.rs  ghostty_backend.rs  ghostty_bridge.rs  ghostty_sys.rs  key_store.rs  known_hosts.rs  mod.rs  native_window.rs  session.rs  ssh.rs  types.rs
zeroclaw/benches/: agent_benchmarks.rs
zeroclaw/crates/robot-kit/: Cargo.toml  PI5_SETUP.md  README.md
zeroclaw/crates/robot-kit/src/: lib.rs
zeroclaw/dev/: README.md
zeroclaw/firmware/zeroclaw-esp32/src/: main.rs
zeroclaw/scripts/: bootstrap.sh  install.sh  recompute_contributor_tiers.sh
zeroclaw/scripts/ci/: fetch_actions_data.py
zeroclaw/src/: clawboy_triggers.rs  ffi_credential_hook.rs  identity.rs  lib.rs  main.rs  migration.rs  multimodal.rs  util.rs
zeroclaw/src/agent/: agent.rs  dispatcher.rs  loop_.rs  memory_loader.rs  mod.rs  prompt.rs  tests.rs
zeroclaw/src/approval/: mod.rs
zeroclaw/src/auth/: anthropic_token.rs  gemini_oauth.rs  mod.rs  openai_oauth.rs  profiles.rs
zeroclaw/src/channels/: cli.rs  discord.rs  discord_backfill.rs  discord_buffer.rs  mod.rs  telegram.rs  traits.rs  transcription.rs
zeroclaw/src/config/: mod.rs  schema.rs  traits.rs
zeroclaw/src/cost/: tracker.rs  types.rs
zeroclaw/src/cron/: mod.rs  schedule.rs  scheduler.rs  store.rs  types.rs
zeroclaw/src/daemon/: mod.rs
zeroclaw/src/doctor/: mod.rs
zeroclaw/src/gateway/: api.rs  mod.rs  sse.rs  static_files.rs  ws.rs
zeroclaw/src/hardware/: introspect.rs  mod.rs  registry.rs
zeroclaw/src/heartbeat/: engine.rs
zeroclaw/src/hooks/: mod.rs  runner.rs  traits.rs
zeroclaw/src/integrations/: mod.rs  registry.rs
zeroclaw/src/memory/: backend.rs  chunker.rs  cli.rs  consolidation.rs  discord_archive.rs  embeddings.rs  heuristic.rs  hygiene.rs  lucid.rs  markdown.rs  mod.rs  none.rs  qdrant.rs  response_cache.rs  scoring.rs  snapshot.rs  sqlite.rs  traits.rs  vector.rs  working_context.rs
zeroclaw/src/messages_bridge/: client.rs  crypto.rs  events.rs  longpoll.rs  methods.rs  mod.rs  pairing.rs  pblite.rs  session.rs  store.rs  tool.rs  types.rs
zeroclaw/src/messages_bridge/proto/: authentication.proto  client.proto  config.proto  conversations.proto  events.proto  rpc.proto  settings.proto  util.proto
zeroclaw/src/observability/: log.rs  mod.rs  runtime_trace.rs  verbose.rs
zeroclaw/src/onboard/: mod.rs  wizard.rs
zeroclaw/src/peripherals/: arduino_flash.rs  arduino_upload.rs  mod.rs  nucleo_flash.rs  rpi.rs  serial.rs
zeroclaw/src/providers/: anthropic.rs  cascade.rs  deepseek.rs  gemini.rs  mod.rs  ollama.rs  openai.rs  openai_compat.rs  qwen.rs  traits.rs  xai.rs
zeroclaw/src/rag/: mod.rs
zeroclaw/src/router/: mod.rs
zeroclaw/src/runtime/: docker.rs  wasm.rs
zeroclaw/src/scripting/: content_hash.rs  host.wit  mod.rs  plugin_abi.rs  storage.rs  triggers.rs
zeroclaw/src/security/: audit.rs  estop.rs  leak_detector.rs  mod.rs  pairing.rs  policy.rs  prompt_guard.rs  secrets.rs  traits.rs
zeroclaw/src/service/: mod.rs
zeroclaw/src/skillforge/: evaluate.rs  integrate.rs  mod.rs  scout.rs
zeroclaw/src/skills/: audit.rs  mod.rs  symlink_tests.rs
zeroclaw/src/sop/: audit.rs  condition.rs  dispatch.rs  engine.rs  gates.rs  metrics.rs  mod.rs  types.rs
zeroclaw/src/tools/: browser.rs  browser_open.rs  cli_discovery.rs  composio.rs  content_search.rs  cron_add.rs  delegate.rs  discord_search.rs  file_edit.rs  file_read.rs  file_write.rs  git_operations.rs  glob_search.rs  hardware_memory_read.rs  http_request.rs  image_info.rs  memory_search.rs  mod.rs  model_routing_config.rs  pdf_read.rs  proxy_config.rs  pushover.rs  schema.rs  screenshot.rs  shell.rs  sop_advance.rs  sop_approve.rs  sop_execute.rs  sop_status.rs  twitter_browse.rs  web_fetch.rs  web_search_tool.rs
zeroclaw/src/tools/email/: check.rs  client.rs  compose.rs  delete.rs  empty_trash.rs  mod.rs  read.rs  reply.rs  search.rs  types.rs
zeroclaw/src/tunnel/: mod.rs
zeroclaw/tests/: agent_e2e.rs  config_schema.rs  consolidation_integration.rs  discord_archive_e2e.rs  memcore_integration.rs  memory_comparison.rs  messages_bridge_crypto_test.rs  messages_bridge_store_test.rs  provider_resolution.rs  provider_schema.rs  tailscale_peers_config.rs
zeroclaw/web/: index.html  package-lock.json  package.json  tsconfig.json  vite.config.ts
zeroclaw/web/src/: App.tsx  api.ts  graph.ts  main.ts  platform.config.ts  style.css  types.ts
zeroclaw/web/src/components/layout/: Sidebar.tsx
zeroclaw/web/src/hooks/: useAuth.ts
zeroclaw/web/src/lib/: api.ts  auth.ts  sse.ts  ws.ts
zeroclaw/web/src/panels/: detail.ts  filters.ts  leaderboard.ts  table.ts
(+530 files in other folders)
