[workspace]
members = ["zeroclaw-ffi"]
resolver = "2"

[workspace.package]
edition = "2024"
license = "MIT"

[workspace.lints.clippy]
pedantic = { level = "warn", priority = -1 }
cargo = { level = "warn", priority = -1 }
unwrap_used = "deny"
dbg_macro = "deny"
print_stdout = "warn"
module_name_repetitions = "allow"
must_use_candidate = "allow"
multiple_crate_versions = "allow"
doc_markdown = "allow"
needless_pass_by_value = "allow"
cargo_common_metadata = "allow"
# Pedantic lints allowed for FFI/unsafe-heavy codebase
similar_names = "allow"
cast_possible_truncation = "allow"
cast_sign_loss = "allow"
cast_possible_wrap = "allow"
cast_lossless = "allow"
ptr_as_ptr = "allow"
borrow_as_ptr = "allow"
wildcard_imports = "allow"
too_many_lines = "allow"
struct_excessive_bools = "allow"
items_after_test_module = "allow"
used_underscore_binding = "allow"
redundant_closure = "allow"
redundant_closure_for_method_calls = "allow"
unnecessary_wraps = "allow"
derivable_impls = "allow"
collapsible_if = "allow"
unnested_or_patterns = "allow"
implicit_clone = "allow"
return_self_not_must_use = "allow"
manual_let_else = "allow"
uninlined_format_args = "allow"
map_unwrap_or = "allow"
redundant_else = "allow"
missing_errors_doc = "allow"
missing_panics_doc = "allow"
unnecessary_cast = "allow"
ref_as_ptr = "allow"
let_unit_value = "allow"
if_not_else = "allow"
decimal_literal_representation = "allow"
decimal_bitwise_operands = "allow"
duplicated_attributes = "allow"
undocumented_unsafe_blocks = "allow"
ignored_unit_patterns = "allow"
unnecessary_map_or = "allow"

[workspace.lints.rust]
dead_code = "allow"
unreachable_code = "allow"

[profile.release]
opt-level = "z"
lto = "thin"
codegen-units = 8
strip = true
panic = "unwind"

[profile.dist]
inherits = "release"
opt-level = "z"
lto = "fat"
codegen-units = 1
strip = true
panic = "unwind"
