[package]
name = "zeroclaw-ffi"
version = "0.2.0"
edition.workspace = true
license.workspace = true
description = "UniFFI-annotated facade for ZeroClaw Android bindings"

[lib]
crate-type = ["cdylib"]
name = "zeroclaw"

[lints]
workspace = true

[dependencies]
uniffi = "0.29"
thiserror = "2.0"
# default-features = false: The FFI layer communicates via the gateway
# REST API, so no optional upstream features are needed (channel-matrix,
# channel-lark, memory-postgres, observability-otel, hardware, browser-native,
# sandbox-*, probe, rag-pdf, whatsapp-web are all excluded). The daemon
# binary enables platform-specific features independently.
zeroclaw = { path = "../../zeroclaw", default-features = false }
tokio = { version = "1.50", features = ["rt-multi-thread", "sync", "macros", "net", "time"] }
tokio-util = { version = "0.7", features = ["rt"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_yml = "0.0.9"
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls-webpki-roots", "stream"] }
nanohtml2text = "0.1"
futures-util = "0.3"
anyhow = "1.0"
once_cell = "1"
async-trait = "0.1"
toml = "0.8"
tracing = "0.1"
chrono = "0.4"
rhai = { version = "1.21", features = ["sync"] }
urlencoding = "2.1"
secrecy = "0.10"

# ClawBoy — AI-played Game Boy emulator
boytacean = { version = "0.11", default-features = false }
tokio-tungstenite = { version = "0.28", features = ["rustls-tls-webpki-roots"] }
sha1 = "0.10"
png = "0.17"
base64 = "0.22"

# Google Messages bridge — QR code generation
qrcode = "0.14"

# TTY — PTY management for local shell
nix = { version = "0.29", features = ["fs", "process", "signal", "term", "ioctl"] }
zeroize = { version = "1.8", features = ["derive"] }

# SSH key management and client
# default-features = false: disable russh's own rsa feature to avoid a
# rand_core API conflict between internal-russh-forked-ssh-key and rsa 0.9.
# RSA key generation goes through russh-keys + ssh-key directly instead.
russh = { version = "0.56", default-features = false, features = ["ring"] }
russh-keys = "0.49"
ssh-key = { version = "0.6", features = ["rsa"] }
rsa = "0.9"
uuid = { version = "1", features = ["v4"] }
rand_core = "0.6"
# Memory consolidation — direct SQLite access for backlog table operations
rusqlite = { version = "0.37", features = ["bundled"] }
parking_lot = "0.12"

[features]
default = ["ghostty-vt"]
scripting-wasm-component = ["zeroclaw/scripting-wasm-component"]
ghostty-vt = []

[dev-dependencies]
tempfile = "3"

[target.'cfg(target_os = "android")'.dependencies]
tracing-android = "0.2"
tracing-subscriber = { version = "0.3", default-features = false, features = ["registry", "env-filter"] }
